--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     
     /* background: linear-gradient(135deg, #2c2c8a, #8a56c2); */
-    background-image: url(./generic.jpg);
+    background-image: url(./Task\ app\ img.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
